--- a/public/index.html
+++ b/public/index.html
@@ -6,27 +6,28 @@
     <title>Rest API</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/angular-route.min.js"></script>
-    <script type="text/javascript" src="js/angular-resource.min.js"></script>
-    <script type="text/javascript" src="js/jquery-1.12.0.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="controller/controller.register/register.js"></script>
   </head>
   <body>
     <div id='main' class="container">
       <nav class="navbar-fluid navbar-default navbar-fixed-top">
         <div class="container">
           <a class="navbar-brand" href="/"> Rest API </a>
-          <p class="navbar-text"> Aprendiendo a realizar mi primer Api</p>
-          <p class="navbar-right navbar-text"><a href="/login">Login</a> or <a href="/registro">Register</a></p>
+          <p class="navbar-text">             Aprendiendo a realizar mi primer Api</p>
+          <p class="navbar-right navbar-text" ng-hide="authenticated"><a href="/login">Login</a> or <a href="/registro">Register</a></p>
+          <p class="navbar-right navbar-text" ng-show="authenticated"><a href="/" ng-click="signout()">Logout</a></p>
+          <p class="navbar-right navbar-text" ng-show="authenticated">Signed in as {{current_user}}</p>
         </div>
       </nav>
       <div class="col-md-offset-2 col-md-8">
-        <div ng-view>       
+        <div ng-view>
         </div>
       </div>
     </div>
   </body>
+  <script type="text/javascript" src="js/angular.min.js"></script>
+  <script type="text/javascript" src="js/angular-route.min.js"></script>
+  <script type="text/javascript" src="js/angular-resource.min.js"></script>
+  <script type="text/javascript" src="js/jquery-1.12.0.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </html>
